--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
-    "sass": "^1.43.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "bootstrap": "^5.3.3",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18.3.1",
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
+    "sass": "^1.43.4"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.2"
