--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGODB_URI=mongodb://mongo:27017/TodoApp
+MONGODB_URI=mongodb://mongo:27017/Projekt
 MONGODB_URI_TEST=mongodb://mongo:27017/TodoAppTest
 
 
