--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 PORT=3000
 MONGODB_URI=mongodb://mongo:27017/Projekt
-MONGODB_URI_TEST=mongodb://mongo:27017/TodoAppTest
+JWTPRIVATEKEY=aabbcc
+SALT=10
 
 
 
