--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,8 @@ services:
       - '27017:27017'
     volumes:
       - mongo-data:/data/db
-
+    networks:
+      - app-network
   backend:
     build:
       context: ./backend
@@ -21,6 +22,8 @@ services:
       - /app/node_modules
     depends_on:
       - mongo
+    networks:
+      - app-network
 
   frontend:
     build:
@@ -29,7 +32,6 @@ services:
     container_name: frontend
     ports:
       - 3000:3000
-    restart: always
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -37,6 +39,12 @@ services:
       - CHOKIDAR_POLLING=true
     depends_on:
       - backend
+    networks:
+      - app-network
+      
 
 volumes:
   mongo-data:
+
+networks:
+  app-network:
